--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
+<body class="bg-black">>
+    <div >
         <h1 class="heading">DOM learning</h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
