--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -13,8 +13,14 @@
 </head>
 <body class="bg-black">>
     <div >
-        <h1 class="heading">DOM learning</h1>
+        <h1 id="title" class="heading">DOM learning <span style="display: none";>test text</span></h1>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+        </ul>
     </div>
 </body>
 </html>
